# linux_apps

./: .gitignore  README.md
algorithm/: link-flip.c
applications/: README.md  endian_test.c  gettime.c
applications/algorithm/: compare.c
applications/bonbon_utils/: bonbon_utils.mk
applications/fb-test/: test_fb.c
applications/gtk/: example-0.c
applications/i2c-smbus/at24cxx/: CMakeLists.txt  main.c  main.cpp
applications/i2c-smbus/at24cxx/include/: at24cxx.h
applications/i2c-smbus/at24cxx/src/: at24cxx.cpp
applications/i2c-smbus/at24cxx/tests/: test_byte_read_write.c
applications/input/: input-test.c
applications/linux_service/: ngrokd
applications/netlink/: netlink.c
applications/pthread/: a.out  get_pthread_self.c  test_pthread_args.c
applications/rust_lab/: comments.rs  formatted_print.rs
applications/tests/: builtin_func.c  constructor_test.c  gettime.c  statement_expression.c  zero_length_array.c
bonbon_utils/: bonbon_utils.h
code repo/pthread/: create_pthread.c  test_pthread_args.c
code_repo/pthread/: a.out
drivers/devfs/: .devfs_test.o.d
drivers/platform_drivers/: suniv-f1c100s-test-lradc.c
fb-test/: fb_draw_rect.c
gtk/: hello.py  simple.c
i2c-smbus/bh1750/: bh1750.c
inotify/: main.c
mod repo/: 100ask_ds18b20.mod.c
mod_repo/: 100ask_dht11.mod.c  Makefile  bonbon_oled.c  cdev_template.c  lcd_drv.c  test_eep.c
pthread/: pthread_join_test.c
spi/: README.md
stat/: main.c
tests/: array_pointer.c  devrandom_test.c  label_element.c  layout.c  range_case.c  special_property.c  var_par_macro.c  zero_length_array.c
(+103 files in other folders)
